--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Werkzeug==2.3.7
 email-validator==2.0.0
 requests==2.31.0
 Pillow==11.3.0
+pandas==2.0.3
 reportlab==4.0.4
 openpyxl==3.1.2
 twilio==8.10.0
@@ -15,3 +16,4 @@ qrcode==7.4.2
 PyJWT==2.8.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
+numpy==1.26.4
