--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,51 @@
+# --- Core Web Framework ---
 Flask==2.3.3
+Werkzeug==2.3.7
 Flask-SQLAlchemy==3.0.5
 Flask-Login==0.6.3
 Flask-WTF==1.1.1
 Flask-Mail==0.9.1
 Flask-Babel==3.1.0
-Werkzeug==2.3.7
-email-validator==2.0.0
-requests==2.31.0
-Pillow==11.3.0
-pandas==2.0.3
-reportlab==4.0.4
-openpyxl==3.1.2
-twilio==8.10.0
-qrcode==7.4.2
-PyJWT==2.8.0
-python-dotenv==1.0.0
-gunicorn==21.2.0
+
+# --- Database & Supabase ---
+psycopg2-binary==2.9.9        # PostgreSQL client (utilisé par Supabase)
+supabase==2.3.5               # SDK Python officiel Supabase
+SQLAlchemy==2.0.31
+
+# --- AI / Data Science ---
+pandas==2.2.2
 numpy==1.26.4
+scikit-learn==1.5.2
+joblib==1.4.2
+
+# --- Image Processing / Face Recognition ---
+Pillow==11.3.0
+opencv-python==4.10.0.84
+mediapipe==0.10.14            # Alternative légère à DeepFace
+deepface==0.0.92              # Si tu veux garder DeepFace
+mtcnn==0.1.1
+
+# --- Email & SMS / Notifications ---
+requests==2.31.0
+smtplib3==1.0.0               # envoi e-mail (optionnel)
+twilio==9.0.5                 # SMS notifications
+
+# --- PDF / Export ---
+reportlab==4.2.2
+fpdf2==2.8.0
+
+# --- Utils / Sécurité ---
+itsdangerous==2.1.2
+email-validator==2.0.0
+python-dotenv==1.0.1          # gestion .env pour Render
+bcrypt==4.1.2
+
+# --- Tests automatiques ---
+pytest==8.3.3
+pytest-cov==5.1.0
+
+# --- Internationalisation / Traduction ---
+Babel==2.17.0
+
+# --- Optionnel : API REST et CORS ---
+Flask-Cors==4.0.1
