--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ supabase==2.3.5               # SDK Python officiel Supabase
 SQLAlchemy==2.0.31
 
 # --- AI / Data Science ---
-pandas==2.2.2
-numpy==1.26.4
+pandas==2.2.2 --only-binary=:all:
+numpy==1.26.4 --only-binary=:all:
 scikit-learn==1.5.2
 joblib==1.4.2
 
