--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,10 @@
+
+
 services:
   - type: web
-    name: gmeshaiti
+    name: gmes
     env: python
-    plan: free
-    branch: main
-    buildCommand: pip install -r requirements.txt
+    runtime: python-3.10.11
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: gunicorn app:app
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.9
+    autoDeploy: true
