--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,13 @@
 
-
 services:
   - type: web
     name: gmes
     env: python
-    runtime: python-3.10.11
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: gunicorn app:app
-    autoDeploy: true
+    buildCommand: |
+      apt-get update && apt-get install -y python3.10 python3.10-venv python3.10-dev
+      python3.10 -m venv .venv
+      . .venv/bin/activate
+      pip install --upgrade pip setuptools wheel
+      pip install -r requirements.txt
+    startCommand: |
+      . .venv/bin/activate && gunicorn app:app --bind 0.0.0.0:$PORT
