--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,15 @@ services:
     name: gmes
     env: python
     buildCommand: |
-      apt-get update && apt-get install -y python3.10 python3.10-venv python3.10-dev cmake libboost-all-dev
-      python3.10 -m venv .venv
+      apt-get update && apt-get install -y python3.11 python3.11-venv python3.11-dev
+      python3.11 -m venv .venv
       . .venv/bin/activate
-      python --version
       pip install --upgrade pip setuptools wheel
+      pip install cmake==3.27.7
+      pip install dlib==19.24.2
       pip install -r requirements.txt
     startCommand: |
-      . .venv/bin/activate && python app.py
+      . .venv/bin/activate && gunicorn app:app --bind 0.0.0.0:$PORT
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.0
