--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ pandas==2.2.3
 numpy==1.26.4
 scikit-learn==1.5.2
 joblib==1.4.2
-dlib-bin==19.24.1
+dlib==19.24.1
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 opencv-python-headless==4.8.1.78
