--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,11 @@ pandas==2.2.3
 numpy==1.26.4
 scikit-learn==1.5.2
 joblib==1.4.2
-https://files.pythonhosted.org/packages/89/10/20b6c6523233683b0e46731f8bc2315e12f4553e14a120e52d7e0c9b498d/dlib-19.24.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
+dlib==19.24.2; sys_platform != "win32"
+
+face_recognition==1.3.0
+cmake
+numpy
+opencv-python
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-opencv-python-headless==4.8.1.78
